improved cache benchmarking

--- a/gui-client/contract-evaluator.html
+++ b/gui-client/contract-evaluator.html
@@ -75,7 +75,7 @@
           inputs = ['Date', 'Goal Yield', 'Actual Yield'];
           break;
         case 'customContract':
-          inputs = ['Custom Contract'];
+          inputs = ['Enter Contract'];
           break;
       }
 
