--- a/gui-client/contract-evaluator.html
+++ b/gui-client/contract-evaluator.html
@@ -49,7 +49,7 @@
 
     // List of currencies and stocks
     const currencies = ["GBP", "USD", "EUR", "BGN"];
-    const stocks = ["DIS (109.12)", "TSLA (338.74)", "NVDA (140.15)", "MSFT (NaN)", "RACE (400.00)", "AAPL (100.00)"];
+    const stocks = ["DIS (109.12)", "TSLA (338.74)", "NVDA (140.15)", "MSFT (NaN)", "RACE (400.00) + Dividend", "AAPL (100.00) + Spike"];
 
     // Update parameters based on selected contract
     contractDropdown.addEventListener('change', () => {
